Inclusão dos dados a Coluna à Esquerda

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
               <h2>José Jorge Magalhães Santos</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Técnico Especializado III</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Cursando Engenharia de Software</p>
               <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estudante de Desenvolvimento Front-End</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Santo Amaro - Ba</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jorgesantos.xp@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(71) 98718-6497</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i><Arapongas-PR</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>leandrocont25@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>(67) 99926-4795</p>
               <hr>
   
               <p class="w3-large">
@@ -58,7 +58,7 @@
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:30%">30%</div>
               </div>
-              <p>TODO</p>
+              <p>Python</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
               </div>
@@ -69,16 +69,12 @@
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
               </div>
-              <p>TODO</p>
+              <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
-              </div>
-              <p>TODO</p>
-              <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:50%"></div>
-              </div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
+              
               <br>
             </div>
           </div><br>
